# Backn-Fluxana

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  init.py
Simulation/fixm_nattention/: CMakeLists.txt  drawpic.cpp  init_vis.mac  run.mac  sim.cc  vis.mac
Simulation/fixm_nattention/include/: ActionInitialization.hh  Analysis.hh  DataManger.hh  DetectorConstruction.hh  EventAction.hh  MaterialsDef.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorGunAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
Simulation/fixm_nattention/src/: ActionInitialization.cc  DataManger.cc  DetectorConstruction.cc  EventAction.cc  MaterialsDef.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorGunAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
ana/: CMakeLists.txt  DemoUnfolding.cpp  MIGRATION_CALFLUX.md  README_FLATTEN.md  README_RDATAFRAME.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  flatten_event.cpp  rdataframe_analysis.cpp
ana/docs/: GetHRateXSUF_Optimization.md  GetHRateXSUF_Usage.md
ana/include/: ConfigReader.h  CrossSectionAnalysis.h  DoubleBunchUnfolder.h  NeutronFluxAnalysis.h  RDataFrameAnalysis.h  WNSEvent.h  WNSEventLinkDef.h  mystyle.h  utils.h
ana/scripts/: README_run_analysis.md  calc_xs_error.cpp  drawxs.cpp  json_editor.py  run_analysis.py  run_analysis_ui.py  run_flatten.py  run_uf.py
ana/src/: ConfigReader.cxx  CrossSectionAnalysis.cxx  DoubleBunchUnfolder.cxx  NeutronFluxAnalysis.cxx  RDataFrameAnalysis.cxx  WNSEvent.cxx
config/: 202512_Flux.json  2025_232Th.json  example.json  filepath.json
